Axios hard coded path

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,5 +1,5 @@
 # client/.env development
 
-CLIENT_URL=http://localhost:3001
+CLIENT_URL=https://oferti.com
 CLIENT_URL_PRODUCTION=https://oferti.com
 API_URL=http://localhost:5000
