--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "fast-xml-parser": "^4.5.0",
     "fortawesome": "^0.0.1-security",
     "hbs": "^4.2.0",
     "js-cookie": "^3.0.5",
@@ -26,8 +28,10 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "socket.io-client": "^4.7.5",
+    "timers-browserify": "^2.0.12",
     "uuid": "^10.0.0",
-    "web-vitals": "^4.2.1"
+    "web-vitals": "^4.2.1",
+    "xml2js": "^0.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^16.0.0"
+    "@testing-library/react": "^16.0.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
