--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filemanagement",
+  "name": "oferti",
   "version": "1.0.0",
   "main": "index.js",
   "homepage": "http://oferti.com",
